objects/iahelp__HelpVoteSet__c.object
<CustomObject>
    <description>Define groups of Help Vote Options from which Users can select to cast a Vote</description>
    <fields>
        <fullName>iahelp__ImageClass__c</fullName>
        <description>URL (relative or full path) of an image to use for this Help Vote Set</description>
        <inlineHelpText>URL (relative or full path) of an image to use for this Help Vote Set</inlineHelpText>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__ImagePreview__c</fullName>
        <formula>IF(iahelp__ImageClass__c == &apos;&apos; || iahelp__ImageClass__c == null, &apos;&apos;, IMAGE( iahelp__ImageClass__c ,  iahelp__QuestionText__c, 16, 16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__QuestionText__c</fullName>
        <description>The question to present to Users when offering the Help Vote Options from which to select</description>
        <inlineHelpText>The question to present to Users when offering the Help Vote Options from which to select</inlineHelpText>
        <label>Question Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Help Vote Set</label>
    <listViews>
        <fullName>iahelp__All</fullName>
        <columns>NAME</columns>
        <columns>iahelp__QuestionText__c</columns>
        <columns>iahelp__ImageClass__c</columns>
        <columns>iahelp__ImagePreview__c</columns>
        <filterScope>Everything</filterScope>
        <label>1. All Help Vote Sets</label>
    </listViews>
    <nameField>
        <label>Help Vote Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Vote Sets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>